--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import Button from "../components/Button.astro";
                 return
             }
             if(text.length - 1 >= pointer) {
-                document.getElementById("slogan").innerHTML += text.charAt(pointer++)
+                document.getElementById("slogan")!!.innerHTML += text.charAt(pointer++)
                 if(text.charAt(pointer) == ','){
                     extraCounter=20;
                 }
