adapt mobile view

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,11 +13,11 @@ import Button from "../components/Button.astro";
       rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap" rel="stylesheet">
 <div class="flex justify-center items-center h-screen dark:bg-slate-800"> <!--  bg-gray-800 -->
-    <div class="flex flex-row items-center">
+    <div class="flex flex-row items-center max-sm:flex-col">
         <img src="https://avatars.githubusercontent.com/u/48877375" alt="avatar"
              class="rounded-full size-48 border-blue-400 border-2 hover:shadow-2xl transition-all dark:hover:shadow-slate-600">
         <div class="flex flex-col pl-4">
-            <p class="text-2xl dark:text-3xl dark:text-sky-400 dark:font-iceland">iceBear67</p>
+            <p class="text-2xl dark:text-3xl dark:text-sky-400 dark:font-iceland flex max-sm:justify-center max-sm:pt-2">iceBear67</p>
             <div class="flex flex-row">
                 <p class="italic text-gray-600 dark:text-gray-500" id="slogan"></p>
                 <p class="animate-handTyped text-gray-600 dark:text-gray-500">_</p>
